enable profiling in the REPL